# classicube-plugin-manager-plugin

./: Cargo.toml  flake.nix
.github/: renovate.json  semantic-release.json
.github/workflows/: build.yml  release-artifacts.yml  release.yml
src/: asset_match.rs  atomic_write.rs  breadcrumb.rs  chat.rs  component.rs  config.rs  github_release.rs  installer.rs  lib.rs  reconcile.rs  secret.rs  self_path.rs
src/asset_match/: tests.rs
src/breadcrumb/: tests.rs
src/chat/: tests.rs
src/components/: async_manager.rs  command.rs  loader.rs  logger.rs  manager.rs  mod.rs  updater.rs
src/components/command/: tests.rs
src/components/manager/: tests.rs
src/components/updater/: tests.rs
src/config/: tests.rs
src/discover/: mod.rs  plugins.toml  tests.rs
src/github_release/: tests.rs
src/installer/: mod.rs  tests.rs
src/loader/: mod.rs  plugin.rs  tests.rs
src/reconcile/: tests.rs
src/secret/: tests.rs
src/self_path/: tests.rs
