[package]
name = "classicube-plugin-updater-plugin"
version = "1.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.102"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=5.0.0"
reqwest = { version = "=0.13.3", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.52.1", features = ["full"] }
toml = "=1.1.2"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "=3.23.0"
