[package]
name = "classicube-plugin-updater-plugin"
version = "0.2.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.102"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=5.0.0"
reqwest = { version = "=0.13.3", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.11.0"
tokio = { version = "=1.52.1", features = ["full"] }
toml = "=1.1.2"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tempfile = "=3.27.0"
