[package]
name = "classicube-plugin-manager-plugin"
version = "1.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.102"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=6.0.4"
reqwest = { version = "=0.13.4", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
tempfile = "=3.27.0"
tokio = { version = "=1.52.3", features = ["full"] }
toml = "=1.1.2"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
